Position reporter added

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 */Binaries
 */Content/StarterContent
 
-BuildingEscape/.vs/BuildingEscape/v15/Browse.VC.db
-BuildingEscape/.vs/BuildingEscape/v15/Browse.VC.opendb
+BuildingEscape/.vs/BuildingEscape/v15/
+BuildingEscape/.vs/BuildingEscape/v15/
