--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=75456F9A469189C558794880AF6DD353
+CompanyName=Nikto
 
 [StartupActions]
 bAddPacks=True
